wip theme, css for images in post and search

--- a/themes/even/source/css/_custom/_custom.scss
+++ b/themes/even/source/css/_custom/_custom.scss
@@ -15,6 +15,10 @@
   border-radius: 50%;
 }
 
-.home-true .post-content img {
+article.post .post-content img.img-post{
   display: none;
+}
+
+article.post.inpost-true .post-content img.img-post{
+  display: inline-block;
 }
